@@ -16,6 +16,7 @@ Changed interface:
 
 Deprecations:
 - The previously deprecated support for Python 2.7 has been removed. please use Python 3 instead.
+- The maximum value for --max-ctu-depth is currently capped at 10. This limitation will be removed in a future release.
 -
 
 Other:
